# code_box

code/: CMakeLists.txt
code/libopencv-4.5.0-linux-x64-prebuilt/include/opencv4/opencv2/: opencv_modules.hpp
code/libopencv-4.5.0-linux-x64-prebuilt/lib/: libopencv_img_hash.so.4.5.0  libopencv_world.so.4.5
code/libopencv-4.5.0-linux-x64-prebuilt/lib/cmake/opencv4/: OpenCVConfig.cmake
code/libopencv-4.5.0-linux-x64-prebuilt/lib/pkgconfig/: opencv4.pc
code/models/: AnprDetect_Malay.param  AnprDetect_US.param  AnprDetect_US.txt  FireDetect.param  FireDetect.txt  Gun-detect.param  PersonCount.param  facemask.txt  trash.txt  usplate.txt
code/paddle/: config.txt
code/paddle/det/: inference.pdmodel
code/paddle/paddle_inference/: CMakeCache.txt  version.txt
code/paddle/rec/: inference.pdmodel
code/src/: Android.mk  Application.mk  main_its.cpp  main_lanlan-tund.cpp  main_lanlan.cpp  main_objectdetection.cpp  main_oppose.cpp  main_personcount.cpp  main_speed.cpp
code/src/AiCore/: AiTypeData.hpp  MotionDetector.cpp  MotionDetector.hpp
code/src/AiCore/paddle/: OCR.cpp  OCR.hpp
code/src/AiCore/paddle/paddle-core/: config.cpp  config.h  ocr_cls.h  ocr_det.cpp  ocr_det.h  ocr_rec.cpp  ocr_rec.h  utility.cpp
code/src/AiCore/snpe/detector/: SnpeMobilenetSSD.cpp
code/src/AiCore/sort-tracker/: KalmanTracker.cpp  ObjectTracker.cpp  ObjectTracker.hpp  ObjectTracking.cpp  ObjectTracking.hpp  TrackerManager.cpp  TrackerManager.hpp
code/src/AiEngines/AIBenchmark/: benchmark.cpp  benchmark.hpp  map.cpp  map.hpp
code/src/AiEngines/Anpr/: AnprDetector.cpp  AnprRecognizer.cpp  AnprRecognizer.hpp  AnprRecognizex86.cpp  AnprRecognizex86.hpp  ITS.cpp  ITS.hpp
code/src/AiEngines/Anpr/ocr/: ocr_db_crnn.hpp
code/src/AiEngines/Intrustion/: IntrustionManager.cpp  IntrustionManager.hpp
code/src/AiEngines/Tracking/: ObjTracking.cpp  ObjTracking.hpp
code/src/AiEngines/major/: Intrusion.cpp  Intrusion.hpp  PersonCount.cpp  PersonCount.hpp
code/src/AiEngines/major/Children/: Children.cpp  Children.hpp
code/src/AiEngines/major/Litter/: Litter.cpp  Litter.hpp
code/src/AiEngines/t/: Intrusion.cpp  Intrusion.hpp  main_ins.cpp
code/src/AiEngines/traffic/: BlowRedLight.cpp  BlowRedLight.hpp  Invade-old.cpp  Invade-old.hpp  Invade.cpp  Invade.hpp  Oppose.cpp  Oppose.hpp  Speed.cpp  Speed.hpp  lanlan-tund.cpp  lanlan-tund.hpp
code/src/AiEngines/traffic/Vehicle/: VehicleTracking.cpp  VehicleTracking.hpp
code/src/AiEngines/traffic/Vehicle/PaddleOCR-Linux-x64/: config.txt  ocr_rec.cpp
code/src/Decoder/: Decoder.hpp  DecoderThread.cpp  DecoderThread.hpp
code/src/GetFrame/: BuffImgMapping.cpp  BuffImgMapping.hpp  Config.hpp  FileMappingInterface.hpp  FrameManager.cpp  FrameManager.hpp  HttpSession.cpp  HttpSession.hpp  SyncMapping.cpp  SyncMapping.hpp
code/src/main/: main.cpp  main_anpr.cpp  main_benchmark.cpp  main_benchmark_ocr.cpp  main_children.cpp  main_getFrameDemo.cpp  main_i.cpp  main_ins.cpp  main_q.cpp  main_quang.cpp  main_trash.cpp  main_v.cpp  main_veh.cpp
